kubernetes/main/apps/default/gitea/app/auth-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    gethomepage.dev/enabled: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /user/oauth2/Authentik/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: gitea-auth
spec:
  ingressClassName: internal
  rules:
    - host: &host git.18b.haus
      http:
        paths:
          - backend:
              service:
                name: gitea-http
                port:
                  number: 3000
            path: /user/login.*$
            pathType: Prefix
          - backend:
              service:
                name: gitea-http
                port:
                  number: 3000
            path: /user/forgot_password.*$
            pathType: Prefix
  tls:
    - hosts:
        - *host
